// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Escrow renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  delayLongPress={600}
  extraButtonProps={
    {
      "exclusive": true,
      "rippleColor": "transparent",
    }
  }
  onPress={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "#F56522",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingLeft": 8,
        "paddingRight": 8,
      },
      false,
      undefined,
    ]
  }
>
  <PeachText
    style={
      [
        {
          "color": "#F56522",
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "lineHeight": 24,
          "textTransform": "uppercase",
        },
        false,
      ]
    }
  >
    escrow
  </PeachText>
  <Icon
    color="#F56522"
    id="externalLink"
    style={
      {
        "height": 12,
        "marginLeft": 4,
        "marginTop": -1,
        "width": 12,
      }
    }
  />
</TouchableOpacity>
`;

exports[`Escrow renders correctly with an active dispute 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  delayLongPress={600}
  extraButtonProps={
    {
      "exclusive": true,
      "rippleColor": "transparent",
    }
  }
  onPress={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "#F56522",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingLeft": 8,
        "paddingRight": 8,
      },
      {
        "borderColor": "#FE5A48",
      },
      undefined,
    ]
  }
>
  <PeachText
    style={
      [
        {
          "color": "#F56522",
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "lineHeight": 24,
          "textTransform": "uppercase",
        },
        {
          "color": "#FE5A48",
        },
      ]
    }
  >
    escrow
  </PeachText>
  <Icon
    color="#FE5A48"
    id="externalLink"
    style={
      {
        "height": 12,
        "marginLeft": 4,
        "marginTop": -1,
        "width": 12,
      }
    }
  />
</TouchableOpacity>
`;
